feat: add style to textarea

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,10 +2,14 @@
   --top-nav-bg: #ffffff;
   --text-normal: #2c3e50;
   --border: #eaecef;
+  --textarea-bg: #f3f4f5;
+  --accent: #3eaf7c;
 }
 
 .body.dark {
   --top-nav-bg: #272b2f;
   --text-normal: #adbac7;
   --border: #3e4c5a;
+  --textarea-bg: #2b313a;
+  --accent: #3eaf7c;
 }
