refactor: rename color

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --top-nav-bg: #ffffff;
+  --bg: #ffffff;
   --text-normal: #2c3e50;
   --border: #eaecef;
   --textarea-bg: #f3f4f5;
@@ -7,7 +7,7 @@
 }
 
 .body.dark {
-  --top-nav-bg: #272b2f;
+  --bg: #272b2f;
   --text-normal: #adbac7;
   --border: #3e4c5a;
   --textarea-bg: #2b313a;
