feat: add custom markdown theme

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import url('/node_modules/normalize.css/normalize.css');
 @import url('./colors.scss');
+@import url('./styles/github-markdown.css');
 
 html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
