feat: add preview and fullscreen buttons

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,6 +2,7 @@
   --bg: #ffffff;
   --text-normal: #2c3e50;
   --border: #eaecef;
+  --button-border: #868e96;
   --textarea-bg: #f3f4f5;
   --accent: #3eaf7c;
 }
@@ -10,6 +11,7 @@
   --bg: #272b2f;
   --text-normal: #adbac7;
   --border: #3e4c5a;
+  --button-border: #495057;
   --textarea-bg: #2b313a;
   --accent: #3eaf7c;
 }
