feat: update tooltip css

--- a/src/styles/github-markdown.css
+++ b/src/styles/github-markdown.css
@@ -45,7 +45,7 @@
   --color-danger-fg: #cf222e;
 }
 
-.body.dark {
+html.dark {
   --color-prettylights-syntax-comment: #8b949e;
   --color-prettylights-syntax-constant: #79c0ff;
   --color-prettylights-syntax-entity: #d2a8ff;
@@ -82,7 +82,7 @@
   --color-canvas-default: #272b2f;
   --color-canvas-subtle: #161b22;
   --color-border-default: #30363d;
-  --color-border-muted: #21262d;
+  --color-border-muted: #3e4c5a;
   --color-neutral-muted: rgba(110,118,129,0.4);
   --color-accent-fg: #58a6ff;
   --color-accent-emphasis: #1f6feb;
